[fix]: Remove code smell